sdk/opendp/smartnoise/sql/parser/SqlSmallParser.py
# Generated from SqlSmall.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SqlSmallParser ( Parser ):

    grammarFileName = "SqlSmall.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "','", "'.'", "'\"'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'<=>'", "'<>'", 
                     "'!='", "'<'", "<INVALID>", "'>'", "<INVALID>", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'~'", "'&'", "'|'", "'||'", 
                     "'^'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'/**/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ABS", "ACOS", 
                      "ALL", "AND", "ANTI", "AS", "ASC", "ASIN", "ATAN", 
                      "AVG", "BETWEEN", "BY", "CASE", "CEILING", "CHOOSE", 
                      "COS", "COT", "COUNT", "CROSS", "DEGREES", "DENSE_RANK", 
                      "DESC", "DISTINCT", "DIV", "ELSE", "END", "EXP", "FALSE", 
                      "FLOOR", "FROM", "FULL", "GROUP", "HAVING", "IF", 
                      "IIF", "IN", "INNER", "INTERSECT", "IS", "JOIN", "LEFT", 
                      "LIMIT", "LN", "LOG", "LOG10", "MAX", "MIN", "NEWID", 
                      "NOT", "NULL", "NUMERIC", "ON", "OR", "ORDER", "OUTER", 
                      "OVER", "PARTITION", "PERCENTILE_CONT", "PERCENTILE_DISC", 
                      "PI", "POWER", "RAND", "RANDOM", "RANK", "RIGHT", 
                      "ROUND", "ROW_NUMBER", "ROWNUM", "SELECT", "SEMI", 
                      "SIGN", "SIN", "SORT", "SQL", "SQRT", "SQUARE", "STD", 
                      "STDDEV", "STDEV", "SUM", "TAN", "THEN", "TOP", "TRUE", 
                      "UNION", "USING", "VAR", "VARIANCE", "WHEN", "WHERE", 
                      "EQ", "NSEQ", "NEQ", "NEQJ", "LT", "LTE", "GT", "GTE", 
                      "PLUS", "MINUS", "ASTERISK", "SLASH", "PERCENT", "TILDE", 
                      "AMPERSAND", "PIPE", "CONCAT_PIPE", "HAT", "STRING", 
                      "INTEGER_VALUE", "DECIMAL_VALUE", "QN2", "QN3", "IDENT", 
                      "IDENTIFIER_UNICODE", "IDENTIFIER", "ESCAPED_IDENTIFIER", 
                      "LETTER", "DOUBLEQ_STRING_LITERAL", "SIMPLE_COMMENT", 
                      "BRACKETED_EMPTY_COMMENT", "BRACKETED_COMMENT", "WS", 
                      "SPACE" ]

    RULE_batch = 0
    RULE_query = 1
    RULE_subquery = 2
    RULE_expressionSubquery = 3
    RULE_selectClause = 4
    RULE_fromClause = 5
    RULE_whereClause = 6
    RULE_aggregationClause = 7
    RULE_havingClause = 8
    RULE_orderClause = 9
    RULE_limitClause = 10
    RULE_topClause = 11
    RULE_joinRelation = 12
    RULE_joinType = 13
    RULE_joinCriteria = 14
    RULE_sortItem = 15
    RULE_setQuantifier = 16
    RULE_relation = 17
    RULE_relationPrimary = 18
    RULE_caseExpression = 19
    RULE_namedExpression = 20
    RULE_namedExpressionSeq = 21
    RULE_whenExpression = 22
    RULE_whenBaseExpression = 23
    RULE_expression = 24
    RULE_predicate = 25
    RULE_functionExpression = 26
    RULE_booleanExpression = 27
    RULE_bareFunction = 28
    RULE_rankingFunction = 29
    RULE_roundFunction = 30
    RULE_powerFunction = 31
    RULE_comparisonOperator = 32
    RULE_booleanValue = 33
    RULE_allExpression = 34
    RULE_literal = 35
    RULE_rankingFunctionName = 36
    RULE_aggregateFunctionName = 37
    RULE_mathFunctionName = 38
    RULE_bareFunctionName = 39
    RULE_overClause = 40
    RULE_aliasedSubquery = 41
    RULE_aliasedTableOrSubquerySeq = 42
    RULE_aliasedTableSeq = 43
    RULE_aliasedTableName = 44
    RULE_qualifiedTableName = 45
    RULE_qualifiedColumnName = 46
    RULE_identifier = 47
    RULE_number = 48

    ruleNames =  [ "batch", "query", "subquery", "expressionSubquery", "selectClause", 
                   "fromClause", "whereClause", "aggregationClause", "havingClause", 
                   "orderClause", "limitClause", "topClause", "joinRelation", 
                   "joinType", "joinCriteria", "sortItem", "setQuantifier", 
                   "relation", "relationPrimary", "caseExpression", "namedExpression", 
                   "namedExpressionSeq", "whenExpression", "whenBaseExpression", 
                   "expression", "predicate", "functionExpression", "booleanExpression", 
                   "bareFunction", "rankingFunction", "roundFunction", "powerFunction", 
                   "comparisonOperator", "booleanValue", "allExpression", 
                   "literal", "rankingFunctionName", "aggregateFunctionName", 
                   "mathFunctionName", "bareFunctionName", "overClause", 
                   "aliasedSubquery", "aliasedTableOrSubquerySeq", "aliasedTableSeq", 
                   "aliasedTableName", "qualifiedTableName", "qualifiedColumnName", 
                   "identifier", "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    ABS=7
    ACOS=8
    ALL=9
    AND=10
    ANTI=11
    AS=12
    ASC=13
    ASIN=14
    ATAN=15
    AVG=16
    BETWEEN=17
    BY=18
    CASE=19
    CEILING=20
    CHOOSE=21
    COS=22
    COT=23
    COUNT=24
    CROSS=25
    DEGREES=26
    DENSE_RANK=27
    DESC=28
    DISTINCT=29
    DIV=30
    ELSE=31
    END=32
    EXP=33
    FALSE=34
    FLOOR=35
    FROM=36
    FULL=37
    GROUP=38
    HAVING=39
    IF=40
    IIF=41
    IN=42
    INNER=43
    INTERSECT=44
    IS=45
    JOIN=46
    LEFT=47
    LIMIT=48
    LN=49
    LOG=50
    LOG10=51
    MAX=52
    MIN=53
    NEWID=54
    NOT=55
    NULL=56
    NUMERIC=57
    ON=58
    OR=59
    ORDER=60
    OUTER=61
    OVER=62
    PARTITION=63
    PERCENTILE_CONT=64
    PERCENTILE_DISC=65
    PI=66
    POWER=67
    RAND=68
    RANDOM=69
    RANK=70
    RIGHT=71
    ROUND=72
    ROW_NUMBER=73
    ROWNUM=74
    SELECT=75
    SEMI=76
    SIGN=77
    SIN=78
    SORT=79
    SQL=80
    SQRT=81
    SQUARE=82
    STD=83
    STDDEV=84
    STDEV=85
    SUM=86
    TAN=87
    THEN=88
    TOP=89
    TRUE=90
    UNION=91
    USING=92
    VAR=93
    VARIANCE=94
    WHEN=95
    WHERE=96
    EQ=97
    NSEQ=98
    NEQ=99
    NEQJ=100
    LT=101
    LTE=102
    GT=103
    GTE=104
    PLUS=105
    MINUS=106
    ASTERISK=107
    SLASH=108
    PERCENT=109
    TILDE=110
    AMPERSAND=111
    PIPE=112
    CONCAT_PIPE=113
    HAT=114
    STRING=115
    INTEGER_VALUE=116
    DECIMAL_VALUE=117
    QN2=118
    QN3=119
    IDENT=120
    IDENTIFIER_UNICODE=121
    IDENTIFIER=122
    ESCAPED_IDENTIFIER=123
    LETTER=124
    DOUBLEQ_STRING_LITERAL=125
    SIMPLE_COMMENT=126
    BRACKETED_EMPTY_COMMENT=127
    BRACKETED_COMMENT=128
    WS=129
    SPACE=130

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BatchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlSmallParser.QueryContext)
            else:
                return self.getTypedRuleContext(SqlSmallParser.QueryContext,i)


        def EOF(self):
            return self.getToken(SqlSmallParser.EOF, 0)

        def getRuleIndex(self):
            return SqlSmallParser.RULE_batch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBatch" ):
                listener.enterBatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBatch" ):
                listener.exitBatch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBatch" ):
                return visitor.visitBatch(self)
            else:
                return visitor.visitChildren(self)




    def batch(self):

        localctx = SqlSmallParser.BatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_batch)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.query()
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 99
                    self.match(SqlSmallParser.T__0)
                    self.state = 100
                    self.query() 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.T__0:
                self.state = 106
                self.match(SqlSmallParser.T__0)


            self.state = 109
            self.match(SqlSmallParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectClause(self):
            return self.getTypedRuleContext(SqlSmallParser.SelectClauseContext,0)


        def fromClause(self):
            return self.getTypedRuleContext(SqlSmallParser.FromClauseContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(SqlSmallParser.WhereClauseContext,0)


        def aggregationClause(self):
            return self.getTypedRuleContext(SqlSmallParser.AggregationClauseContext,0)


        def havingClause(self):
            return self.getTypedRuleContext(SqlSmallParser.HavingClauseContext,0)


        def orderClause(self):
            return self.getTypedRuleContext(SqlSmallParser.OrderClauseContext,0)


        def limitClause(self):
            return self.getTypedRuleContext(SqlSmallParser.LimitClauseContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = SqlSmallParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.selectClause()
            self.state = 112
            self.fromClause()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.WHERE:
                self.state = 113
                self.whereClause()


            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.GROUP:
                self.state = 116
                self.aggregationClause()


            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.HAVING:
                self.state = 119
                self.havingClause()


            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.ORDER:
                self.state = 122
                self.orderClause()


            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.LIMIT:
                self.state = 125
                self.limitClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubqueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectClause(self):
            return self.getTypedRuleContext(SqlSmallParser.SelectClauseContext,0)


        def fromClause(self):
            return self.getTypedRuleContext(SqlSmallParser.FromClauseContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(SqlSmallParser.WhereClauseContext,0)


        def aggregationClause(self):
            return self.getTypedRuleContext(SqlSmallParser.AggregationClauseContext,0)


        def havingClause(self):
            return self.getTypedRuleContext(SqlSmallParser.HavingClauseContext,0)


        def orderClause(self):
            return self.getTypedRuleContext(SqlSmallParser.OrderClauseContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_subquery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubquery" ):
                listener.enterSubquery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubquery" ):
                listener.exitSubquery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubquery" ):
                return visitor.visitSubquery(self)
            else:
                return visitor.visitChildren(self)




    def subquery(self):

        localctx = SqlSmallParser.SubqueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_subquery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(SqlSmallParser.T__1)
            self.state = 129
            self.selectClause()
            self.state = 130
            self.fromClause()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.WHERE:
                self.state = 131
                self.whereClause()


            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.GROUP:
                self.state = 134
                self.aggregationClause()


            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.HAVING:
                self.state = 137
                self.havingClause()


            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.ORDER:
                self.state = 140
                self.orderClause()


            self.state = 143
            self.match(SqlSmallParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionSubqueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subquery(self):
            return self.getTypedRuleContext(SqlSmallParser.SubqueryContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_expressionSubquery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionSubquery" ):
                listener.enterExpressionSubquery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionSubquery" ):
                listener.exitExpressionSubquery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionSubquery" ):
                return visitor.visitExpressionSubquery(self)
            else:
                return visitor.visitChildren(self)




    def expressionSubquery(self):

        localctx = SqlSmallParser.ExpressionSubqueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expressionSubquery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.subquery()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectClauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(SqlSmallParser.SELECT, 0)

        def namedExpressionSeq(self):
            return self.getTypedRuleContext(SqlSmallParser.NamedExpressionSeqContext,0)


        def setQuantifier(self):
            return self.getTypedRuleContext(SqlSmallParser.SetQuantifierContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_selectClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectClause" ):
                listener.enterSelectClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectClause" ):
                listener.exitSelectClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectClause" ):
                return visitor.visitSelectClause(self)
            else:
                return visitor.visitChildren(self)




    def selectClause(self):

        localctx = SqlSmallParser.SelectClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_selectClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(SqlSmallParser.SELECT)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.ALL or _la==SqlSmallParser.DISTINCT or _la==SqlSmallParser.TOP:
                self.state = 148
                self.setQuantifier()


            self.state = 151
            self.namedExpressionSeq()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FromClauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(SqlSmallParser.FROM, 0)

        def relation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlSmallParser.RelationContext)
            else:
                return self.getTypedRuleContext(SqlSmallParser.RelationContext,i)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_fromClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFromClause" ):
                listener.enterFromClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFromClause" ):
                listener.exitFromClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFromClause" ):
                return visitor.visitFromClause(self)
            else:
                return visitor.visitChildren(self)




    def fromClause(self):
